# Evaluation-Matrix-for-LLM

./: README.md  experiment.sh  pyproject.toml
configs/: dataset_config.yaml  eval_config.yaml  model_config.yaml
data/: test.jsonl
scripts/: run_eval.sh  run_inference.sh  upload_to_hf.sh
src/eval/: bertscore_eval.py  embedding_similarity_eval.py  evaluator.py  exact_match_eval.py  f1_eval.py  format_validity_eval.py  llm_judge_eval.py  llm_judge_evaluator.py
src/inference/: run_inference.py  tokenizer_loader.py
src/uploader/: hf_uploader.py
src/utils/: file_io.py  llm_client.py  logger.py  metrics.py
